fixed match card meta section alignment

--- a/client/components/match_history/MatchCard.module.css
+++ b/client/components/match_history/MatchCard.module.css
@@ -30,6 +30,7 @@
     color: #F0F4F8;
     font-family: sans-serif;
     font-size: 1.9vh;
+    margin-top: 0;
     margin-bottom: 2vh;
     cursor: default;
     -webkit-user-drag: none; 
